--- a/react-portfolio/src/components/Home/Home.module.css
+++ b/react-portfolio/src/components/Home/Home.module.css
@@ -1,12 +1,12 @@
 .Home {
-  background: rgb(2, 0, 36);
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 32%,
-    rgba(4, 102, 191, 1) 100%,
-    rgba(0, 212, 255, 1) 100%
+  background-color: #1d9ac5;
+  background-image: linear-gradient(
+    225deg,
+    #47c2d8 0%,
+    #2b8caa 50%,
+    #155474 100%
   );
+
   display: flex;
   height: 630px;
   padding-top: 80px;
@@ -15,13 +15,18 @@
 
 .Home .Container {
   position: absolute;
-  top: 60%;
-  left: 2%;
+  top: 40%;
+  left: 20.5%;
   color: white;
 }
 
-.Home .Container .Hello {
+.Home .Container .Name {
   font-size: 63px;
+}
+
+.Home .Container .SubTopic {
+  font-weight: 400;
+  color: rgb(207, 197, 197);
 }
 
 .Home .HomeImg {
