--- a/react-portfolio/src/components/About/About.module.css
+++ b/react-portfolio/src/components/About/About.module.css
@@ -1,30 +1,33 @@
 .AboutMe {
-  background-color: rgb(235, 233, 233);
+  background-color: rgb(255, 255, 255);
   padding-bottom: 5%;
 }
-
 .AboutMe .Container {
-  display: flex;
+  align-items: center;
 }
 
 .AboutMe .Container .Text {
-  width: 57%;
-  margin-left: 3%;
+  width: 65%;
+
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .AboutMe .Container .Text p {
   font-size: 18px;
 }
-
+/*
 .AboutMe .Container .Photo {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-}
+}*/
 
 .AboutMe .Container .Photo .Me {
-  height: 400px;
-  border-radius: 0%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 200px;
+  border-radius: 50%;
+  border: solid 4px white;
 }
 
 .AboutMe .Container .Text h2 {
