--- a/react-portfolio/src/components/Home/Home.module.css
+++ b/react-portfolio/src/components/Home/Home.module.css
@@ -2,36 +2,33 @@
   background-color: #1d9ac5;
   background-image: linear-gradient(
     225deg,
-    #47c2d8 0%,
-    #2b8caa 50%,
-    #155474 100%
+    #eff4f7 0%,
+    #dfe9f0 50%,
+    #dde0e2 100%
   );
 
-  display: flex;
-  height: 630px;
-  padding-top: 80px;
-  position: relative;
+  height: 450px;
+  padding-top: 300px;
+
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .Home .Container {
-  position: absolute;
   top: 40%;
-  left: 20.5%;
+
   color: white;
 }
 
 .Home .Container .Name {
   font-size: 63px;
-  color: white;
+  color: rgb(41, 40, 40);
 }
 
 .Home .Container .SubTopic {
   font-weight: 400;
-  color: rgb(207, 197, 197);
-}
-
-.Home .HomeImg {
-  width: 100%;
+  color: rgb(82, 80, 80);
 }
 
 .Home .Container h1 {
