--- a/react-portfolio/src/components/Home/Home.module.css
+++ b/react-portfolio/src/components/Home/Home.module.css
@@ -9,16 +9,15 @@
 
   height: 450px;
   padding-top: 300px;
-
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .Home .Container {
   top: 40%;
 
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .Home .Container .Name {
