--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -6,6 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 h1 {
   font-weight: 650;
   font-size: 35px;
