--- a/react-portfolio/src/components/Contact/Contact.module.css
+++ b/react-portfolio/src/components/Contact/Contact.module.css
@@ -1,6 +1,6 @@
 .Contact {
   background-color: rgb(68, 128, 163);
-  height: 300px;
+  height: 35vh;
   display: flex;
   align-items: center;
 }
@@ -9,6 +9,10 @@
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.Contact .ContactIcons div {
+  padding: 10px;
 }
 
 .Contact .ContactIcons svg path {
