--- a/react-portfolio/src/components/Home/Home.module.css
+++ b/react-portfolio/src/components/Home/Home.module.css
@@ -1,27 +1,25 @@
 .Home {
   background-color: #1d9ac5;
-  background-image: linear-gradient(
-    225deg,
-    #eff4f7 0%,
-    #dfe9f0 50%,
-    #dde0e2 100%
-  );
 
-  height: 450px;
+  height: 60vh;
   padding-top: 300px;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .Home .Container {
   top: 40%;
 
   color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+  position: absolute;
 }
 
 .Home .Container .Name {
-  font-size: 63px;
+  font-size: calc(2.5rem + 2.5vw);
   color: rgb(41, 40, 40);
 }
 
