--- a/react-portfolio/src/components/NavBar/NavBar.module.css
+++ b/react-portfolio/src/components/NavBar/NavBar.module.css
@@ -1,7 +1,7 @@
 .NavBar {
   background-color: #ffffff;
 
-  height: 80px;
+  height: 10vh;
   width: 100%;
   position: fixed;
   z-index: 999;
@@ -19,7 +19,7 @@
 
 .NavBar nav ul li {
   display: inline-block;
-  margin: 20px;
+  margin: 1.5vw;
 }
 
 .NavBar nav ul li a {
@@ -29,4 +29,50 @@
 
 .NavBar a:hover {
   border-bottom: 5px solid #1d9ac5;
+}
+
+.NavBar .MobileNavigation {
+  display: none;
+}
+
+@media (max-width: 900px) {
+  .NavBar .Navigation {
+    display: none;
+  }
+
+  .NavBar .MobileNavigation {
+    display: flex;
+    align-items: center;
+  }
+
+  .NavBar .MobileNavigation .Hamburger {
+    position: absolute;
+    right: 5%;
+    cursor: pointer;
+  }
+
+  .NavBar nav ul {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 75px;
+    right: 0;
+    width: 100%;
+    background: white;
+
+    border-top: 2px solid rgb(59, 160, 201);
+  }
+
+  .NavBar nav ul li {
+    padding-left: 15%;
+  }
+
+  .NavBar {
+    opacity: 1;
+  }
+
+  .NavBar a:hover {
+    border-bottom: none;
+    color: rgb(59, 160, 201);
+  }
 }
