--- a/react-portfolio/src/components/Projects/Projects.module.css
+++ b/react-portfolio/src/components/Projects/Projects.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .Projects .ProjectName {
@@ -13,35 +14,44 @@
 }
 
 .Projects .Paragraph {
-  font-size: 20px;
 }
 
 .Projects .ProjectContainer .ProjectTitle {
   margin-bottom: 20px;
+  width: 55%;
+}
+
+.Projects .ProjectContainer .ProjectTitle hr {
+  width: 12vw;
+  border: 1 px solid #1d9ac5;
+  top: 50%;
 }
 
 .Projects .ProjectContainer .Thumbnail img {
   max-width: 250px;
+  width: 36%;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 .Projects .ProjectContainer .Text {
   padding-left: 7%;
   padding-right: 7%;
+  width: 65%;
 }
 
 .Projects .ProjectContainer .Text p {
-  font-size: 16px;
 }
 
 .Projects .ProjectContainer .Technologies p {
-  font-size: 16px;
 }
 
 .Projects .ProjectContainer .Thumbnail {
   padding-left: 2.5%;
   padding-right: 2.5%;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  width: 85%;
 }
 
 .Projects .ProjectName .ProjectContainer {
@@ -50,8 +60,23 @@
   align-items: center;
   background: rgb(255, 255, 255);
   margin-bottom: 5%;
-  height: 500px;
-
+  height: 100%;
   border-radius: 0;
-  box-shadow: 0 0 5px 5px rgb(202, 224, 233);
+  box-shadow: 0 0 1vw 0.3vw rgb(202, 224, 233);
+}
+
+@media (max-width: 704px) {
+  .Projects .ProjectContainer .Thumbnail {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .Projects .ProjectContainer .Thumbnail img {
+    margin-bottom: 1%;
+    width: 50%;
+  }
+
+  .Projects .ProjectContainer .Text {
+    width: 80%;
+  }
 }
