--- a/react-portfolio/src/components/Contact/Contact.module.css
+++ b/react-portfolio/src/components/Contact/Contact.module.css
@@ -1,5 +1,5 @@
 .Contact {
-  background-color: rgb(68, 128, 163);
+  background-color: #1d9ac5;
   height: 35vh;
   display: flex;
   align-items: center;
