--- a/react-portfolio/src/components/NavBar/NavBar.module.css
+++ b/react-portfolio/src/components/NavBar/NavBar.module.css
@@ -58,7 +58,7 @@
     top: 75px;
     right: 0;
     width: 100%;
-    background: white;
+    background: rgb(227, 238, 243);
 
     border-top: 2px solid rgb(59, 160, 201);
   }
